// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/MultiSelect > Basic 1`] = `
<div
  data-dark={false}
>
  <div
    aria-label="label"
    data-testid="SelectGroup"
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "1fr",
      }
    }
  >
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={true}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢1"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢1
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢2"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢2
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={true}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢3"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢3
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢4"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢4
      </div>
    </label>
  </div>
</div>
`;

exports[`Storybook Tests > react/MultiSelect > Invalid 1`] = `
<div
  data-dark={false}
>
  <div
    aria-label="label"
    data-testid="SelectGroup"
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "1fr",
      }
    }
  >
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={true}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢1"
      />
      <div
        aria-hidden={true}
        aria-invalid={true}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢1
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={true}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢2"
      />
      <div
        aria-hidden={true}
        aria-invalid={true}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢2
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={true}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢3"
      />
      <div
        aria-hidden={true}
        aria-invalid={true}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢3
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={true}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢4"
      />
      <div
        aria-hidden={true}
        aria-invalid={true}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢4
      </div>
    </label>
  </div>
</div>
`;

exports[`Storybook Tests > react/MultiSelect > Overlay 1`] = `
<div
  data-dark={false}
>
  <div
    aria-label="label"
    data-testid="SelectGroup"
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "1fr",
      }
    }
  >
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={true}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢1"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={true}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢1
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={true}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢2"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={true}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢2
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={true}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢3"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={true}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢3
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={true}
        disabled={false}
        name="name"
        onChange={[Function]}
        type="checkbox"
        value="選択肢4"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={true}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢4
      </div>
    </label>
  </div>
</div>
`;

exports[`Storybook Tests > react/MultiSelect > Playground 1`] = `
<div
  data-dark={false}
>
  <div
    aria-label=""
    data-testid="SelectGroup"
    style={
      Object {
        "display": "grid",
        "gap": "8px",
        "gridTemplateColumns": "1fr",
      }
    }
  >
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name=""
        onChange={[Function]}
        type="checkbox"
        value="選択肢1"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢
        1
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name=""
        onChange={[Function]}
        type="checkbox"
        value="選択肢2"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢
        2
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name=""
        onChange={[Function]}
        type="checkbox"
        value="選択肢3"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢
        3
      </div>
    </label>
    <label
      aria-disabled={false}
      className="charcoal-multi-select"
    >
      <input
        aria-invalid={false}
        checked={false}
        className="charcoal-multi-select-input"
        data-overlay={false}
        disabled={false}
        name=""
        onChange={[Function]}
        type="checkbox"
        value="選択肢4"
      />
      <div
        aria-hidden={true}
        aria-invalid={false}
        className="charcoal-multi-select-overlay"
        data-overlay={false}
      >
        <pixiv-icon
          name="24/Check"
          unsafe-non-guideline-scale={0.6666666666666666}
        />
      </div>
      <div
        className="charcoal-multi-select-label"
      >
        選択肢
        4
      </div>
    </label>
  </div>
</div>
`;
